# SpaceFighter2D

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  main.cpp
src/: Bullet.cpp  Bullet.h  Enemy.cpp  Enemy.h  Loot.cpp  Loot.h  Map.cpp  Map.h  Player.cpp  Player.h  Setup.cpp  Setup.h  Sound.cpp  Sound.h  TextManager.cpp  TextManager.h  TextureManager.cpp  TextureManager.h  UI.cpp  UI.h
